crates/test-files/fixtures/compile_errors/uninit_values.fe
struct MyStruct {
    x: u256
}

contract Foo {
    pub fn foo() {
        let my_struct: MyStruct
        let my_array: Array<u256, 42>
        let my_tuple: (u256, bool)
    }
}